--- a/configs/experiment/pile/forgetting_transformer/forgetting_gate.yaml
+++ b/configs/experiment/pile/forgetting_transformer/forgetting_gate.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /model: forgetting_transformer
-  - override /optimizer: adam
+  - override /optimizer: adamw
   - override /schedule: warmup_cosine
   - override /datamodule: npy
   - override /strategy: fsdp
@@ -49,7 +49,6 @@ model:
 optimizer: 
   lr: 0.001
   betas: [0.9, 0.95]
-  eps: 1.0e-8
   weight_decay: 0.1
 
 schedule:
