--- a/configs/experiment/pile/transformer/transformer.yaml
+++ b/configs/experiment/pile/transformer/transformer.yaml
@@ -21,8 +21,8 @@ train_eval_interval: 104857600
 checkpoint_interval: 209715200
 
 skip_eval: true
-eval_interval: 2684354560
-checkpoint_keep_interval: 0
+eval_interval: 2097152000
+checkpoint_keep_interval: 2097152000
 
 
 fabric:
