--- a/configs/experiment/pile/transformer/transformer.yaml
+++ b/configs/experiment/pile/transformer/transformer.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /model: transformer
-  - override /optimizer: adam
+  - override /optimizer: adamw
   - override /schedule: warmup_cosine
   - override /datamodule: npy
   - override /strategy: fsdp
